--- a/package.json
+++ b/package.json
@@ -10,19 +10,31 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "12.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@react-oauth/google": "^0.2.6",
+    "@sanity/client": "^3.3.0",
+    "axios": "^0.27.2",
+    "gapi-script": "^1.2.0",
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
+    "uuidv4": "^6.2.13",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@sanity/cli": "^2.33.2",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.11",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "husky": "^8.0.1",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
 }
